--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,6 @@
 <% @posts.each do |post| %>
 <div class="post_wrapper">
     <h2 class="title"><%= link_to post.title, post %></h2>
-    <p class="date"><%= post.created_at.strftime("%B, %d, %Y") %></p>
+    <p class="date"><%=l post.created_at, format: :long , :locale => 'tr' %>, tarihinde yazıldı.</p>
 </div>
 <% end %>
