--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,15 +1,17 @@
-<h1> New Post </h1>
+<div id="page_wrapper">
+    <h1>Yazı Ekle</h1>
 
-<%= form_for :post, url: posts_path do |f| %>
-<p>
-    <%= f.label :title %><br>
-    <%= f.text_field :title %>
-</p>
-<p>
-    <%= f.label :body %><br>
-    <%= f.text_area :body %>
-</p>
-<p>
-    <%= f.submit %>
-</p>
-<% end %>
+    <%= form_for :post, url: posts_path do |f| %>
+    <p>
+        <%= f.label :Başlık %><br>
+        <%= f.text_field :title %>
+    </p>
+    <p>
+        <%= f.label :İçerik %><br>
+        <%= f.text_area :body %>
+    </p>
+    <p>
+        <%= f.submit :Kaydet %>
+    </p>
+    <% end %>
+</div>
