--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,7 +2,10 @@
     <h1 class="title">
         <%= @post.title %>
     </h1>
-    <p class="date"><%=l @post.created_at, format: :long , :locale => 'tr' %>, tarihinde yazıldı.</p>
+    <p class="date"><%=l @post.created_at, format: :long , :locale => 'tr' %>, tarihinde yazıldı.
+        | <%= link_to 'Düzenle', edit_post_path(@post) %>
+        | <%= link_to 'Sil', post_path(@post), method: :delete, data: {confirm: 'Silmek İstediğinize Emin Misiniz ?' } %>
+    </p>
     <p class="blog">
         <%= @post.body %>
     </p>
