--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -9,4 +9,12 @@
     <p class="blog">
         <%= @post.body %>
     </p>
+
+    <div id="comments">
+        <h2><%= @post.comments.count %> Yorum</h2>
+        <%= render @post.comments %>
+
+        <h3>Bir yorum bırakın : </h3>
+        <%= render "comments/form" %>
+    </div>
 </div>
