--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
         <ul>
             <li class="category">Yunus Bulut</li>
             <li><%= link_to "Blog", root_path %></li>
-            <li>Hakkımda</li>
+            <li><%= link_to "Hakkımda", about_path %></li>
         </ul>
 
         <ul>
@@ -33,7 +33,13 @@
     </div>
     <div id="main_content">
         <div id="header">
+            <% if current_page? (root_path)%>
             <p>Tüm Yazılar</p>
+            <% elsif current_page? (about_path)%>
+            <p>Hakkımda</p>
+            <% else %>
+            <%= link_to  "Anasayfa Dön", root_path %>
+            <% end %>
             <div class="buttons">
                 <button class="button"><%= link_to "Yazı Ekle", new_post_path %></button>
                 <button class="button">Çıkış</button>
