--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,9 @@
             <li><a href="https://t.me/yunusbulut" target="_blank">Telegram</a></li>
         </ul>
 
-        <p class="sign_in">Yönetici Girişi</p>
+        <% if !user_signed_in? %>
+        <p class="sign_in"><%= link_to "Yönetici Girişi", new_user_session_path %></p>
+        <% end %>
 
     </div>
     <div id="main_content">
@@ -40,10 +42,14 @@
             <% else %>
             <%= link_to  "Anasayfa Dön", root_path %>
             <% end %>
+
+
+            <% if user_signed_in? %>
             <div class="buttons">
                 <button class="button"><%= link_to "Yazı Ekle", new_post_path %></button>
                 <button class="button">Çıkış</button>
             </div>
+            <% end %>
         </div>
 
         <% flash.each do |name, msg| %>
