--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -3,8 +3,10 @@
         <%= @post.title %>
     </h1>
     <p class="date"><%=l @post.created_at, format: :long , :locale => 'tr' %>, tarihinde yazıldı.
+        <% if user_signed_in? %>
         | <%= link_to 'Düzenle', edit_post_path(@post) %>
         | <%= link_to 'Sil', post_path(@post), method: :delete, data: {confirm: 'Silmek İstediğinize Emin Misiniz ?' } %>
+        <% end %>
     </p>
     <p class="blog">
         <%= @post.body %>
