:heavy_check_mark: added favicon and finish blog

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
     <%= stylesheet_link_tag 'application', 'https://fonts.googleapis.com/css2?family=Grandstander:wght@100;300&family=Open+Sans:wght@300&display=swap' %>
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= favicon_link_tag 'favicon.ico' %>
 </head>
 
 <body>
