--- a/app/views/devise/mailer/unlock_instructions.html.erb
+++ b/app/views/devise/mailer/unlock_instructions.html.erb
@@ -1,7 +1,7 @@
-<p>Hello <%= @resource.email %>!</p>
+<p>Merhaba <%= @resource.email %>!</p>
 
-<p>Your account has been locked due to an excessive number of unsuccessful sign in attempts.</p>
+<p>Çok sayıda başarısız oturum açma girişimi nedeniyle hesabınız kilitlendi.</p>
 
-<p>Click the link below to unlock your account:</p>
+<p>Hesabınızın kilidini açmak için aşağıdaki bağlantıyı tıklayın:</p>
 
 <p><%= link_to 'Unlock my account', unlock_url(@resource, unlock_token: @token) %></p>
