--- a/app/views/devise/mailer/email_changed.html.erb
+++ b/app/views/devise/mailer/email_changed.html.erb
@@ -1,7 +1,7 @@
-<p>Hello <%= @email %>!</p>
+<p>Merhaba <%= @email %>!</p>
 
 <% if @resource.try(:unconfirmed_email?) %>
-  <p>We're contacting you to notify you that your email is being changed to <%= @resource.unconfirmed_email %>.</p>
+<p>E-postanızın olarak değiştirildiğini bildirmek için sizinle iletişim kuruyoruz <%= @resource.unconfirmed_email %>.</p>
 <% else %>
-  <p>We're contacting you to notify you that your email has been changed to <%= @resource.email %>.</p>
+<p>E-postanızın şu şekilde değiştirildiğini bildirmek için sizinle iletişim kuruyoruz <%= @resource.email %>.</p>
 <% end %>
