--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -1,4 +1,4 @@
-<p>Hoşgeldniz<%= @email %>!</p>
+<p>Hoşgeldiniz<%= @email %>!</p>
 
 <p>Hesap e-postanızı aşağıdaki bağlantı üzerinden onaylayabilirsiniz:</p>
 
